[package]
name = "json-ld-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.5"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.10.0"
log = "0.4.20"
reqwest = "0.11.21"
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"] }
url = "2.4.1"
